# maridrop

./: .eslintrc.json  .gitignore  Anchor.toml  package.json  tsconfig.json
cli/: closeTreasury.ts  createPromise.ts  createTreasury.ts  generateRandomPromises.ts  global.ts  index.ts  setPromiseAmount.ts  setStartTime.ts  show.ts  slow.ts  updatePromises.ts
cli/helpers/: anchor-spl-token-helper.ts
programs/maridrop/: Cargo.toml
programs/maridrop/src/: error.rs  lib.rs  promise.rs  treasury.rs
tests/: maridrop.js  maridrop.ts
