[package]
name = "maridrop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "maridrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor.git" }
anchor-spl = { git = "https://github.com/project-serum/anchor.git" }
vipers = "1.0.0"